# RM

hw1/T1/: README.md
hw1/T2/: CMakeLists.txt  REDME.md  main.cpp
hw1/T3/: CMakeLists.txt  README.md  film.cpp
hw2/: CMakeLists.txt  README.md  main.cpp
hw2/T1/: CMakeLists.txt  README.md  main.cpp
hw2/T2/: README.md  main.cpp
hw3/T1/: CMakeLists.txt  README.md  demo.cpp
hw3/T2/: CMakeLists.txt  README.md  main.cpp
hw4/T1/: demo.cpp
hw4/T2/: CMakeLists.txt  VO.cpp  demo.cpp
