cmake_minimum_required(VERSION 3.0)
project( T2 )
set( CMAKE_CXX_STANDARD 17 )
find_package( OpenCV REQUIRED )
find_package (Eigen3 REQUIRED NO_MODULE)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( demo main.cpp )
target_link_libraries( demo ${OpenCV_LIBS} )
target_link_libraries ( demo Eigen3::Eigen )